# push_swap

./: .gitignore  CMakeLists.txt  Makefile_nerabochiy  a.out  cmp_split.sh  compile.sh  ft_strsplit.c  general.c  is_sort.c  libft_cp.c  main.c  markup.c  reading.c  solver.c  sorts.c  stringtonumbers.c  test_atoi.sh  testatoi.c  whitespace.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
include/: pushswap.h
libft/: Makefile
libft/ft_lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libft/ft_str/: ft_strlen.c  ft_strsplit.c  ft_strtolower.c
libft/ft_to/: ft_atoi.c
libft/include/: big_int.h  ft_printf.h  libft.h
libft/src_ftprintf/: f_counter1.c  f_util2.c
sort_func/: a.out  compile.sh  func.h  main.c  main.c2  push_func.c  revrot_func.c  rotate_func.c  swap_func.c
