cmake_minimum_required(VERSION 3.17)
project(Push_Swap_0_0_3 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(libft-printf/include)
include_directories(sort_func)

add_executable(Push_Swap_0_0_3
        include/pushswap.h
        libft-printf/ft_is/ft_isalnum.c
        libft-printf/ft_is/ft_isalpha.c
        libft-printf/ft_is/ft_isascii.c
        libft-printf/ft_is/ft_isdigit.c
        libft-printf/ft_is/ft_isprint.c
        libft-printf/ft_lst/ft_lstadd_back.c
        libft-printf/ft_lst/ft_lstadd_front.c
        libft-printf/ft_lst/ft_lstclear.c
        libft-printf/ft_lst/ft_lstdelone.c
        libft-printf/ft_lst/ft_lstiter.c
        libft-printf/ft_lst/ft_lstlast.c
        libft-printf/ft_lst/ft_lstmap.c
        libft-printf/ft_lst/ft_lstnew.c
        libft-printf/ft_lst/ft_lstsize.c
        libft-printf/ft_mem/ft_memalloc.c
        libft-printf/ft_mem/ft_memccpy.c
        libft-printf/ft_mem/ft_memchr.c
        libft-printf/ft_mem/ft_memcmp.c
        libft-printf/ft_mem/ft_memcpy.c
        libft-printf/ft_mem/ft_memdel.c
        libft-printf/ft_mem/ft_memmove.c
        libft-printf/ft_mem/ft_memset.c
        libft-printf/ft_put/ft_putchar.c
        libft-printf/ft_put/ft_putchar_fd.c
        libft-printf/ft_put/ft_putendl.c
        libft-printf/ft_put/ft_putendl_fd.c
        libft-printf/ft_put/ft_putnbr.c
        libft-printf/ft_put/ft_putnbr_fd.c
        libft-printf/ft_put/ft_putstr.c
        libft-printf/ft_put/ft_putstr_fd.c
        libft-printf/ft_str/ft_strcat.c
        libft-printf/ft_str/ft_strchr.c
        libft-printf/ft_str/ft_strchrn.c
        libft-printf/ft_str/ft_strchrnor.c
        libft-printf/ft_str/ft_strclr.c
        libft-printf/ft_str/ft_strcmp.c
        libft-printf/ft_str/ft_strcpy.c
        libft-printf/ft_str/ft_strdel.c
        libft-printf/ft_str/ft_strdup.c
        libft-printf/ft_str/ft_strdup_prot.c
        libft-printf/ft_str/ft_strequ.c
        libft-printf/ft_str/ft_striter.c
        libft-printf/ft_str/ft_striteri.c
        libft-printf/ft_str/ft_strjoin.c
        libft-printf/ft_str/ft_strjoin_free.c
        libft-printf/ft_str/ft_strjoinoneletter.c
        libft-printf/ft_str/ft_strlcat.c
        libft-printf/ft_str/ft_strlen.c
        libft-printf/ft_str/ft_strlen_prot.c
        libft-printf/ft_str/ft_strmap.c
        libft-printf/ft_str/ft_strmapi.c
        libft-printf/ft_str/ft_strncat.c
        libft-printf/ft_str/ft_strncmp.c
        libft-printf/ft_str/ft_strncpy.c
        libft-printf/ft_str/ft_strnequ.c
        libft-printf/ft_str/ft_strnew.c
        libft-printf/ft_str/ft_strnstr.c
        libft-printf/ft_str/ft_strrchr.c
        libft-printf/ft_str/ft_strreverse.c
        libft-printf/ft_str/ft_strsplit.c
        libft-printf/ft_str/ft_strstr.c
        libft-printf/ft_str/ft_strsub.c
        libft-printf/ft_str/ft_strtolower.c
        libft-printf/ft_str/ft_strtoupper.c
        libft-printf/ft_str/ft_strtrim.c
        libft-printf/ft_to/ft_atoi.c
        libft-printf/ft_to/ft_bzero.c
        libft-printf/ft_to/ft_itoa.c
        libft-printf/ft_to/ft_itoa_base.c
        libft-printf/ft_to/ft_tolower.c
        libft-printf/ft_to/ft_toupper.c
        libft-printf/ft_to/ft_tozero2.c
        libft-printf/ft_to/ft_tozero2_int.c
        libft-printf/ft_to/ft_tozero3.c
        libft-printf/ft_to/ft_tozero3_int.c
        libft-printf/ft_to/ft_tozero4.c
        libft-printf/ft_to/ft_tozero4_int.c
        libft-printf/include/big_int.h
        libft-printf/include/ft_printf.h
        libft-printf/include/libft.h
        libft-printf/other/ft_copyword.c
        libft-printf/other/ft_countw.c
        libft-printf/other/ft_lengthcounter.c
        libft-printf/other/ft_longover.c
        libft-printf/other/ft_power.c
        libft-printf/other/ft_whatismyint.c
        libft-printf/src_ftprintf/f_bigint1.c
        libft-printf/src_ftprintf/f_bigint2.c
        libft-printf/src_ftprintf/f_counter1.c
        libft-printf/src_ftprintf/f_counter2.c
        libft-printf/src_ftprintf/f_round.c
        libft-printf/src_ftprintf/f_tochar1.c
        libft-printf/src_ftprintf/f_tochar2.c
        libft-printf/src_ftprintf/f_util.c
        libft-printf/src_ftprintf/f_util2.c
        libft-printf/src_ftprintf/ft_printf.c
        libft-printf/src_ftprintf/manage_buffer.c
        libft-printf/src_ftprintf/manage_csper.c
        libft-printf/src_ftprintf/manage_d.c
        libft-printf/src_ftprintf/manage_f.c
        libft-printf/src_ftprintf/manage_o.c
        libft-printf/src_ftprintf/manage_p.c
        libft-printf/src_ftprintf/manage_u.c
        libft-printf/src_ftprintf/manage_x.c
        libft-printf/src_ftprintf/parser.c
        libft-printf/src_ftprintf/utils.c
        libft-printf/get_next_line.c
        sort_func/func.h
        sort_func/push_func.c
        sort_func/revrot_func.c
        sort_func/rotate_func.c
        sort_func/swap_func.c
        general.c
        main.c
        markup.c
        reading.c
        stringtonumbers.c
        whitespace.c)
